# graphrag-demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  theme.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/specs/: 2026-03-19-feature-graphrag-demo-portfolio-polish-spec.md
graph/: __init__.py  extractor.py  knowledge_graph.py  retriever.py
rag/: __init__.py  basic.py  graph_rag.py  vector_store.py
tests/: test_extractor.py  test_knowledge_graph.py  test_retriever.py
