[project]
name = "graphrag-demo"
version = "0.1.0"
description = "GraphRAG Demo: Entity-Aware Multi-Hop Retrieval"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.41",
    "networkx>=3.3",
    "anthropic>=0.40",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
vectors = ["sentence-transformers>=3.0.0"]
nlp = ["spacy>=3.7"]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]

[tool.setuptools.packages.find]
include = ["graph*", "rag*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
